--- a/comunidadeimpressionadora/templates/home.html
+++ b/comunidadeimpressionadora/templates/home.html
@@ -6,7 +6,7 @@
             <h1 style="color: orange">Comunidade impressionadora - Hashtag Treinamentos</h1>
            <h2>Alunos,experts e a galera da Hashtag em um só lugar</h2>
             <hr>
-                {% if post %}
+                {% if posts %}
                     {% for post in posts %}
                         <div class="row border mt-4 p-3 meupost">
                             <div class="col col-3">
@@ -35,5 +35,6 @@
                 {% endif %}
         </div>
 {% endblock %}
+
 
 
